enable user registration using email and password